[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/UpgradeSelector.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UpgradeSelector.gd" type="Script" id=2]
[ext_resource path="res://Fonts/alagard.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/UpgradeDescFrame.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Light.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 91, 108.5 )

[node name="UpgradeSelector" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Light" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0.552941, 0.552941, 0.552941, 0.6 )
position = Vector2( 480, 261 )
scale = Vector2( 5.06667, 2.575 )
texture = ExtResource( 5 )

[node name="Mouse" type="Area2D" parent="CanvasLayer"]
pause_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Mouse"]
shape = SubResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
visible = false
margin_left = 56.0
margin_top = 57.0
margin_right = 916.0
margin_bottom = 500.0
texture = ExtResource( 4 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_editor_description_": ""
}

[node name="ConfirmButton" type="Button" parent="CanvasLayer"]
margin_left = 408.0
margin_top = 435.0
margin_right = 558.0
margin_bottom = 489.0
custom_fonts/font = SubResource( 3 )
text = "Select"
flat = true

[node name="Mark" type="Sprite" parent="CanvasLayer"]
position = Vector2( 180, 260.5 )
scale = Vector2( 3.9, 3.9 )
texture = ExtResource( 1 )

[node name="Up1" type="Node2D" parent="CanvasLayer"]
pause_mode = 2
position = Vector2( 180, 262 )

[node name="Up1Area" type="Area2D" parent="CanvasLayer/Up1"]
pause_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Up1/Up1Area"]
shape = SubResource( 1 )

[node name="Up2" type="Node2D" parent="CanvasLayer"]
pause_mode = 2
position = Vector2( 481, 262 )

[node name="Up2Area" type="Area2D" parent="CanvasLayer/Up2"]
pause_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Up2/Up2Area"]
shape = SubResource( 1 )

[node name="Up3" type="Node2D" parent="CanvasLayer"]
pause_mode = 2
position = Vector2( 808, 262 )

[node name="Up3Area" type="Area2D" parent="CanvasLayer/Up3"]
pause_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Up3/Up3Area"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="pressed" from="CanvasLayer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="area_entered" from="CanvasLayer/Up1/Up1Area" to="." method="_on_Up1Area_area_entered"]
[connection signal="area_entered" from="CanvasLayer/Up2/Up2Area" to="." method="_on_Up2Area_area_entered"]
[connection signal="area_entered" from="CanvasLayer/Up3/Up3Area" to="." method="_on_Up3Area_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
